feat: harden backend api and deployment